History navigation, images in questions, session management
Now uses angular-route for routing and bookmarks
Now uses angular-sanitize ng-bind-html  support of HTML content in question.details
Bootstrap now logs activity and uses RouteManager
RouteManager now supports question history navigation
Implemented SessionController - now auto-navigates to Login if session is invalid
QuizBuilder enhanced to support seekTo questions by index
ScoreBuilder enhanced to load question details (if available)
Quiz data now
- has `details` field which supports HTML content
- now supports <img /> tags in the `details` field
Templates now show quiz name, have better use of className(s) and id(s)

--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
 
     <body class="">
 
-        <div ng:view></div>
+        <div ng:view ng-controller="SessionController"></div>
 
         <script src="vendor/headjs-notify/src/load.js"   type="text/javascript" ></script>
         <script src="src/bootstrap.js"                   type="text/javascript" ></script>
