--- a/client/index.html
+++ b/client/index.html
@@ -5,20 +5,14 @@
       <meta charset="utf-8">
       <title>Quizzler Online Testing</title>
 
-     <style>
-         input.ng-invalid {
-             border: 1px solid #ff0711;
-         }
-         input.ng-valid {
-             border: 1px solid green;
-         }
-     </style>
+     <link href="assets/css/bootstrap.css" rel="stylesheet" />
+     <link href="http://fonts.googleapis.com/css?family=Roboto:400,300" rel="stylesheet" type="text/css">
 
     </head>
 
-    <body class="">
+    <body class="eternity-form" >
 
-        <div ng:view ng-controller="SessionController"></div>
+        <div ng:view ng-controller="SessionController" class="viewport"></div>
 
         <script src="vendor/headjs-notify/src/load.js"   type="text/javascript" ></script>
         <script src="src/bootstrap.js"                   type="text/javascript" ></script>
