Skinning for Login, Quiz, and ScoreResults
Non-empty email now is required by Authenticator
ScoreBuilder will use `- no answer given -` for skipped answers
View templates improved with CSS style names.

--- a/client/index.html
+++ b/client/index.html
@@ -6,11 +6,10 @@
       <title>Quizzler Online Testing</title>
 
      <link href="assets/css/bootstrap.css" rel="stylesheet" />
-     <link href="http://fonts.googleapis.com/css?family=Roboto:400,300" rel="stylesheet" type="text/css">
 
     </head>
 
-    <body class="eternity-form" >
+    <body class="quizzler" >
 
         <div ng:view ng-controller="SessionController" class="viewport"></div>
 
