--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8">
       <title>Quizzler Online Testing</title>
 
-     <link href="assets/css/bootstrap.css" rel="stylesheet" />
+     <link href="./assets/css/bootstrap.css" rel="stylesheet" />
 
     </head>
 
@@ -13,8 +13,8 @@
 
         <div ng:view ng-controller="SessionController" class="viewport"></div>
 
-        <script src="vendor/headjs-notify/src/load.js"   type="text/javascript" ></script>
-        <script src="src/bootstrap.js"                   type="text/javascript" ></script>
+        <script src="./vendor/headjs-notify/src/load.js"   type="text/javascript" ></script>
+        <script src="./src/bootstrap.js"                   type="text/javascript" ></script>
 
     </body>
 </html>
