Updated README and configure TestRunner and Karma

--- a/client/test/test.html
+++ b/client/test/test.html
@@ -12,10 +12,13 @@
           Core Libraries
       -->
       <script type="text/javascript" src="../vendor/requirejs/require.js"></script>
+        <script type="text/javascript" src="../vendor/underscore/underscore.js"></script>
       <script type="text/javascript" src="../vendor/jasmine/lib/jasmine-core/jasmine.js"></script>
       <script type="text/javascript" src="../vendor/jasmine-as-promised/jasmine-as-promised.js"></script>
-      <script type="text/javascript" src="../vendor/angular/angular.js"></script>
 
+      <script type="text/javascript" src="../vendor/angular/angular.js"></script>
+      <script type="text/javascript" src="../vendor/angular-route/angular-route.js"></script>
+      <script type="text/javascript" src="../vendor/angular-sanitize/angular-sanitize.js"></script>
 
       <!--
           1) Special Angular wrapper to support spec `module` and `inject` fuctions for LIVE $http calls...
@@ -26,7 +29,7 @@
       <script type="text/javascript" src="../vendor/angular-specs/src/angular-specs.js"></script>
       <script type="text/javascript" src="../vendor/jasmine/lib/jasmine-core/jasmine-html.js"></script>
 
-      <script type="text/javascript" src="config/liveBoot.js"></script>
+      <script type="text/javascript" src="config/bootstrap.js"></script>
 
     </head>
 
