Support for HighlightJS
Added more questions to Quiz
Support for code syntax highlighting using highlightJS
- Updates to bower to install highlightJS
- Updates to requireJS to load highlightJS

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
       <title>Quizzler Online Testing</title>
 
      <link href="./assets/css/bootstrap.css" rel="stylesheet" />
+     <link href="./assets/css/monokai.css" rel="stylesheet"   />
 
     </head>
 
