--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
         <div ng:view ng-controller="SessionController" class="viewport"></div>
 
         <script src="./vendor/headjs-notify/src/load.js"   type="text/javascript" ></script>
-        <script src="./src/bootstrap.js"                   type="text/javascript" ></script>
+        <script src="./assets/js/boot.js"                  type="text/javascript" ></script>
 
     </body>
 </html>
